--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "author": "Pebble Technology",
     "dependencies": {
-        "pebble-clay": "^1.0.1"
+        "pebble-clay": "^1.0.2"
     },
     "keywords": [],
     "name": "clay-example",
@@ -15,7 +15,8 @@
             "BackgroundColor",
             "ForegroundColor",
             "SecondTick",
-            "Animations"
+            "Animations",
+            "Email"
         ],
         "projectType": "native",
         "resources": {
